--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1933,6 +1933,8 @@
 
         <!-- CyanogenMod activities End -->
 
+        <activity android:name=".pac.AppSidebar" />
+
         <!-- Pseudo-activity used to provide an intent-filter entry point to sound packages settings -->
         <activity android:name="Settings$SoundPackageSettingsActivity"
                 android:label="@string/sound_packages_title"
